# html-compacting

./: html-compacting.cabal
tests/: Main.hs
